--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <h1>Hello,World!</h1>
+    <ul id="usersList"></ul>
     <form id="myform">
         <input type="text" name="user" placeholder="User Name">
         <input type="password" name="pass" placeholder="Password">
@@ -26,16 +27,51 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
-            $('.btn').click(function () {
-                var user = $('input[name="user"]').val();
-                var pass = $('input[name="pass"]').val();
+            //Read
+            buildPage();
+        });
+        //Delete
+        $('#usersList').on('click', '.remove', function () {
+            console.log($(this).parent().data('id'));
+            var id = $(this).parent().data('id');
+            $.ajax({
+                url: '/users/' + id,
+                type: 'DELETE',
+                success: function (res) {
+                    console.log(res);
+                    buildPage();
+                }
+            });
+        });
+        // Create
+        $('.btn').click(function () {
+            var user = $('input[name="user"]').val();
+            var pass = $('input[name="pass"]').val();
 
-                $.post('/users', $('#myform').serialize()).done(function (data) {
-                    console.log(data);
-                });
+            $.post('/users', $('#myform').serialize()).done(function (data) {
+                console.log(data);
+                buildPage();
             });
 
         });
+
+        function buildPage() {
+            //Read
+            $('#usersList').html('');
+            $.getJSON('/users', function (data) {
+                $.each(data.users, function (i, value) {
+                    var hLink = '<a href="/users/' + value.id + '" target="_blank">' + value
+                        .id +
+                        '</a>';
+                    var listNew = $('<li>User: ' + value.user + ' ' + hLink +
+                        '<span class="remove">x</span></li>');
+                    listNew.data('id', value.id);
+                    $('#usersList').append(listNew);
+                    console.log(i, value);
+                })
+            });
+
+        }
     </script>
 
 </body>
