--- a/public/index.html
+++ b/public/index.html
@@ -26,52 +26,69 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
-        $(document).ready(function () {
-            //Read
-            buildPage();
-        });
-        //Delete
-        $('#usersList').on('click', '.remove', function () {
-            console.log($(this).parent().data('id'));
-            var id = $(this).parent().data('id');
-            $.ajax({
-                url: '/users/' + id,
-                type: 'DELETE',
-                success: function (res) {
+        class MyCRUD {
+
+            constructor() {
+                this.usersList = $('#usersList');
+                this.myform = $('#myform');
+                this.btn = $('.btn');
+
+                //read
+                this.buildPage();
+                this.events();
+            }
+            events() {
+                //register eventListener
+                //create
+                this.btn.on('click', this.createUser.bind(this));
+                //delete
+                this.usersList.on('click', '.remove', this.deleteUser.bind(this));
+
+
+            }
+            //delete
+            deleteUser(e) {
+                let id = $(e.target).parent().data('id');
+                console.log(id);
+
+                $.ajax({
+                    url: '/users/' + id,
+                    type: 'DELETE'
+                }).done(res => {
                     console.log(res);
-                    buildPage();
-                }
-            });
-        });
-        // Create
-        $('.btn').click(function () {
-            var user = $('input[name="user"]').val();
-            var pass = $('input[name="pass"]').val();
+                    this.buildPage();
+                });
+            }
+            //create
+            createUser() {
+                // let user = $('input[name="user"]').val();
+                // let pass = $('input[name="pass"]').val();
+                $.post('/users', this.myform.serialize()).done(data => {
+                    console.log(data);
+                    this.buildPage();
+                });
 
-            $.post('/users', $('#myform').serialize()).done(function (data) {
-                console.log(data);
-                buildPage();
-            });
+            }
+            //read
+            buildPage() {
+                this.usersList.html('');
+                $.getJSON('/users', (data) => {
+                    $.each(data.users, (i, value) => {
+                        let hLink = '<a href="/users/' + value.id + '" target="_blank">' +
+                            value
+                            .id +
+                            '</a>';
+                        let newList = $('<li>User: ' + value.user + ' ' + hLink +
+                            '<span class="remove">x</span></li>');
+                        newList.data('id', value.id);
+                        this.usersList.append(newList);
+                    });
+                });
 
-        });
 
-        function buildPage() {
-            //Read
-            $('#usersList').html('');
-            $.getJSON('/users', function (data) {
-                $.each(data.users, function (i, value) {
-                    var hLink = '<a href="/users/' + value.id + '" target="_blank">' + value
-                        .id +
-                        '</a>';
-                    var listNew = $('<li>User: ' + value.user + ' ' + hLink +
-                        '<span class="remove">x</span></li>');
-                    listNew.data('id', value.id);
-                    $('#usersList').append(listNew);
-                    console.log(i, value);
-                })
-            });
-
+            }
         }
+        const crud = new MyCRUD();
     </script>
 
 </body>
