--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJAX with Node Express Server</title>
     <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            margin: 0 3px 3px 3px;
+            padding: 0.5em;
+            font-size: 1.2em;
+            height: 20px;
+        }
+
+        li span {
+            font-size: 0.8em;
+            border: 1px solid black;
+            padding: 0 6px;
+            display: inline-block;
+        }
+
         .btn {
             border: 1px solid black;
             padding: 5px;
+            display: inline-block
+        }
+
+
+
+        .viewLink a {
+            text-decoration: none;
+        }
+
+        #myform {
+            border: 1px solid black;
+            padding: 10px;
+            width: 300px;
+
+            box-sizing: border-box;
+        }
+
+        .btn {
             display: inline-block;
+            width: 300px;
+            padding: 10px;
+            box-sizing: border-box;
+            background: rgb(62, 58, 58);
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            text-align: center;
+        }
+
+        .btn:hover {
+            color: black;
+            background: #fff;
         }
     </style>
 </head>
@@ -19,9 +70,11 @@
     <ul id="usersList"></ul>
     <form id="myform">
         <input type="text" name="user" placeholder="User Name">
-        <input type="password" name="pass" placeholder="Password">
+        <input type="text" name="pass" placeholder="Password">
+
     </form>
-    <div class="btn">Click Me</div>
+    <div class="btn">Create User</div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -32,6 +85,7 @@
                 this.usersList = $('#usersList');
                 this.myform = $('#myform');
                 this.btn = $('.btn');
+
 
                 //read
                 this.buildPage();
@@ -44,11 +98,33 @@
                 //delete
                 this.usersList.on('click', '.remove', this.deleteUser.bind(this));
 
+                //update
+                this.usersList.on('click', '.edit', this.updateUser.bind(this));
+
+
 
             }
+
+            //update
+            updateUser(e) {
+                let data = $(e.target).parent().find('input').serialize();
+                let id = $(e.target).parent().find('input[name="id"]').val();
+                $.ajax({
+                    url: '/users/' + id,
+                    type: "PUT",
+                    data: data,
+                }).done(res => {
+                    console.log(res);
+                    this.buildPage();
+                });
+            }
+
+
+
+
             //delete
             deleteUser(e) {
-                let id = $(e.target).parent().data('id');
+                let id = $(e.target).parent().data('user').id;
                 console.log(id);
 
                 $.ajax({
@@ -63,6 +139,7 @@
             createUser() {
                 // let user = $('input[name="user"]').val();
                 // let pass = $('input[name="pass"]').val();
+                console.log(this.myform.serialize());
                 $.post('/users', this.myform.serialize()).done(data => {
                     console.log(data);
                     this.buildPage();
@@ -74,13 +151,16 @@
                 this.usersList.html('');
                 $.getJSON('/users', (data) => {
                     $.each(data.users, (i, value) => {
-                        let hLink = '<a href="/users/' + value.id + '" target="_blank">' +
-                            value
-                            .id +
-                            '</a>';
-                        let newList = $('<li>User: ' + value.user + ' ' + hLink +
-                            '<span class="remove">x</span></li>');
-                        newList.data('id', value.id);
+
+                        let el = '<li><input type="text" name="user" value="' + value.user + '">';
+                        el += '<input type="text" name="pass" value="' + value.pass + '">';
+                        el += '<input type="hidden" name="id" value="' + value.id + '">';
+                        el += '<span class="remove">x</span><span class="edit">Save</span>';
+                        el += '<span class="viewLink"><a href="/users/' + value.id +
+                            '" target="_blank">View</a></span></li>'
+
+                        let newList = $(el);
+                        newList.data('user', value); //data属性にオブジェクトをセットできる
                         this.usersList.append(newList);
                     });
                 });
