--- a/public/index.html
+++ b/public/index.html
@@ -1,176 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AJAX with Node Express Server</title>
     <style>
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
 
-        li {
-            margin: 0 3px 3px 3px;
-            padding: 0.5em;
-            font-size: 1.2em;
-            height: 20px;
-        }
+      li {
+        margin: 0 3px 3px 3px;
+        padding: 0.5em;
+        font-size: 1.2em;
+        height: 20px;
+      }
 
-        li span {
-            font-size: 0.8em;
-            border: 1px solid black;
-            padding: 0 6px;
-            display: inline-block;
-        }
+      li span {
+        font-size: 0.8em;
+        border: 1px solid black;
+        padding: 0 6px;
+        display: inline-block;
+      }
 
-        .btn {
-            border: 1px solid black;
-            padding: 5px;
-            display: inline-block
-        }
+      .btn {
+        border: 1px solid black;
+        padding: 5px;
+        display: inline-block;
+      }
 
+      .viewLink a {
+        text-decoration: none;
+      }
 
+      #myform {
+        border: 1px solid black;
+        padding: 10px;
+        width: 300px;
 
-        .viewLink a {
-            text-decoration: none;
-        }
+        box-sizing: border-box;
+      }
 
-        #myform {
-            border: 1px solid black;
-            padding: 10px;
-            width: 300px;
+      .btn {
+        display: inline-block;
+        width: 300px;
+        padding: 10px;
+        box-sizing: border-box;
+        background: rgb(62, 58, 58);
+        font-size: 20px;
+        font-weight: bold;
+        color: white;
+        text-align: center;
+      }
 
-            box-sizing: border-box;
-        }
-
-        .btn {
-            display: inline-block;
-            width: 300px;
-            padding: 10px;
-            box-sizing: border-box;
-            background: rgb(62, 58, 58);
-            font-size: 20px;
-            font-weight: bold;
-            color: white;
-            text-align: center;
-        }
-
-        .btn:hover {
-            color: black;
-            background: #fff;
-        }
+      .btn:hover {
+        color: black;
+        background: #fff;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Hello,World!</h1>
     <ul id="usersList"></ul>
     <form id="myform">
-        <input type="text" name="user" placeholder="User Name">
-        <input type="text" name="pass" placeholder="Password">
-
+      <input type="text" name="name" placeholder="User Name" />
+      <input type="text" name="pass" placeholder="Password" />
     </form>
     <div class="btn">Create User</div>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <script>
-        class MyCRUD {
+      class MyCRUD {
+        constructor() {
+          this.usersList = $('#usersList');
+          this.myform = $('#myform');
+          this.btn = $('.btn');
 
-            constructor() {
-                this.usersList = $('#usersList');
-                this.myform = $('#myform');
-                this.btn = $('.btn');
-
-
-                //read
-                this.buildPage();
-                this.events();
-            }
-            events() {
-                //register eventListener
-                //create
-                this.btn.on('click', this.createUser.bind(this));
-                //delete
-                this.usersList.on('click', '.remove', this.deleteUser.bind(this));
-
-                //update
-                this.usersList.on('click', '.edit', this.updateUser.bind(this));
-
-
-
-            }
-
-            //update
-            updateUser(e) {
-                let data = $(e.target).parent().find('input').serialize();
-                let id = $(e.target).parent().find('input[name="id"]').val();
-                $.ajax({
-                    url: '/users/' + id,
-                    type: "PUT",
-                    data: data,
-                }).done(res => {
-                    console.log(res);
-                    this.buildPage();
-                });
-            }
-
-
-
-
-            //delete
-            deleteUser(e) {
-                let id = $(e.target).parent().data('user').id;
-                console.log(id);
-
-                $.ajax({
-                    url: '/users/' + id,
-                    type: 'DELETE'
-                }).done(res => {
-                    console.log(res);
-                    this.buildPage();
-                });
-            }
-            //create
-            createUser() {
-                // let user = $('input[name="user"]').val();
-                // let pass = $('input[name="pass"]').val();
-                console.log(this.myform.serialize());
-                $.post('/users', this.myform.serialize()).done(data => {
-                    console.log(data);
-                    this.buildPage();
-                });
-
-            }
-            //read
-            buildPage() {
-                this.usersList.html('');
-                $.getJSON('/users', (data) => {
-                    $.each(data.users, (i, value) => {
-
-                        let el = '<li><input type="text" name="user" value="' + value.user + '">';
-                        el += '<input type="text" name="pass" value="' + value.pass + '">';
-                        el += '<input type="hidden" name="id" value="' + value.id + '">';
-                        el += '<span class="remove">x</span><span class="edit">Save</span>';
-                        el += '<span class="viewLink"><a href="/users/' + value.id +
-                            '" target="_blank">View</a></span></li>'
-
-                        let newList = $(el);
-                        newList.data('user', value); //data属性にオブジェクトをセットできる
-                        this.usersList.append(newList);
-                    });
-                });
-
-
-            }
+          //read
+          this.buildPage();
+          this.events();
         }
-        const crud = new MyCRUD();
+        events() {
+          //register eventListener
+          //create
+          this.btn.on('click', this.createUser.bind(this));
+          //delete
+          this.usersList.on('click', '.remove', this.deleteUser.bind(this));
+
+          //update
+          this.usersList.on('click', '.edit', this.updateUser.bind(this));
+        }
+
+        //update
+        updateUser(e) {
+          let data = $(e.target).parent().find('input').serialize();
+          let id = $(e.target).parent().find('input[name="id"]').val();
+          $.ajax({
+            url: '/users/' + id,
+            type: 'PUT',
+            data: data,
+          }).done(res => {
+            console.log(res);
+            this.buildPage();
+          });
+        }
+
+        //delete
+        deleteUser(e) {
+          let id = $(e.target).parent().data('user').id;
+          console.log(id);
+
+          $.ajax({
+            url: '/users/' + id,
+            type: 'DELETE',
+          }).done(res => {
+            console.log(res);
+            this.buildPage();
+          });
+        }
+        //create
+        createUser() {
+          // let user = $('input[name="user"]').val();
+          // let pass = $('input[name="pass"]').val();
+          console.log(this.myform.serialize());
+          $.post('/users', this.myform.serialize()).done(data => {
+            console.log(data);
+            this.buildPage();
+          });
+        }
+        //read
+        buildPage() {
+          this.usersList.html('');
+          $.getJSON('/users', data => {
+            console.log(data);
+            $.each(data, (i, value) => {
+              let el =
+                '<li><input type="text" name="name" value="' +
+                value.name +
+                '">';
+              el +=
+                '<input type="text" name="pass" value="' + value.pass + '">';
+              el += '<input type="hidden" name="id" value="' + value.id + '">';
+              el +=
+                '<span class="remove">x</span><span class="edit">Save</span>';
+              el +=
+                '<span class="viewLink"><a href="/users/' +
+                value.id +
+                '" target="_blank">View</a></span></li>';
+
+              let newList = $(el);
+              newList.data('user', value); //data属性にオブジェクトをセットできる
+              this.usersList.append(newList);
+            });
+          });
+        }
+      }
+      const crud = new MyCRUD();
     </script>
-
-</body>
-
+  </body>
 </html>
